# sistem

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: requirements.txt
docs/source/: bulk_profiles.rst  cell_lineage.rst  clone_lineage.rst  conf.py  growth_sim.rst  index.rst  install.rst  migration.rst  migration_history.rst  output_formats.rst  parameters.rst  quickstart.rst  selection.rst  seq_count_data.rst  sequencing_reads.rst
scripts/: get_migration_pattern.py
sistem/: __init__.py  ancestry.py  parameters.py
sistem/anatomy/: __init__.py  base_anatomy.py  genotype_anatomy.py  static_anatomy.py  utils.py
sistem/data/: __init__.py  profiles.py  reads.py  sequence.py  summarize.py  utils.py
sistem/genome/: __init__.py  chromosome.py  genome.py  utils.py
sistem/lineage/: __init__.py  cell.py  lineage.py  mutation.py  reevolve.py  tree.py  utils.py
sistem/selection/: __init__.py  arm_library.py  base_library.py  hybrid_library.py  region_library.py
sistem/utilities/: IO.py  utilities.py
wrapper/: README.md  config.yaml  sistem_wrapper.py
