[build-system]
requires = ["setuptools>=80.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sistem"
version = "1.0.0"
description = "Genotype-driven tumor growth and metastasis simulator"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name="Samson Weiner", email="samson.weiner@uconn.edu" }
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "biopython",
    "pyfaidx"   
]

[project.urls]
Homepage = "https://github.com/samsonweiner/sistem"
