[metadata]
name = sistem
version = 1.0.0
description = Genotype-driven tumor growth and metastasis simulator
long_description = file: README.md
long_description_content_type = text/markdown
author = Samson Weiner
author_email = samson.weiner@uconn.edu
license = GPL-3.0-only

[options]
packages = find:
python_requires = >=3.12
install_requires =
    numpy
    scikit-learn
    scipy
    biopython
    pyfaidx
